INTERNAL: Once again: Fixed dropdown z-index.

--- a/src/gui/Components/Dropdowner/Dropdowner.module.scss
+++ b/src/gui/Components/Dropdowner/Dropdowner.module.scss
@@ -1,6 +1,6 @@
 .droppedBox {
   position: absolute;
-  z-index: 200;
+  z-index: 2000;
 }
 
 .dropdownerContainer {
